# socratic-garden

./: .gitignore  Makefile  README.md  pyproject.toml
.github/agents/: choose-a-mode.agent.md  clarify-change.agent.md  define-user-experience.agent.md  design-doc-assistant.agent.md  documentation-planner.agent.md  documentation-reviewer.agent.md  draft-documentation.agent.md
.github/skills/assess-quality-attributes/: SKILL.md
.github/skills/calibrate-scrutiny/: SKILL.md
.github/skills/capture-decisions/: SKILL.md
.github/skills/choose-a-mode/: SKILL.md
.github/skills/compare-design-to-docs/: SKILL.md
.github/skills/define-terminology/: SKILL.md
.github/skills/documentation-templates/: SKILL.md
.github/skills/extract-user-facing-implications/: SKILL.md
.github/skills/grilling/: SKILL.md
.github/skills/identify-edge-cases/: SKILL.md
.github/skills/identify-the-audience/: SKILL.md
.github/skills/map-user-journey/: SKILL.md
.github/skills/recap-the-session/: SKILL.md
.github/skills/right-size-the-documentation/: SKILL.md
.github/skills/route-documentation-artifacts/: SKILL.md
.github/skills/separate-fact-from-inference/: SKILL.md
agents/: clarify-change.md  define-user-experience.md  design-doc-assistant.md  documentation-planner.md  documentation-reviewer.md  draft-documentation.md
docs/: installation.md  philosophy.md  usage.md
examples/minimal-project/: socratic-garden.yaml
skills/: extract-user-facing-implications.md  identify-edge-cases.md  interview-one-question-at-a-time.md  route-documentation-artifacts.md  separate-fact-from-inference.md
socratic_garden/: __init__.py  __main__.py  cli.py  config.py  context.py  frontmatter.py  paths.py  sessions.py
templates/: design-doc-outline.md
tests/: test_socratic_garden.py
(+12 files in other folders)
